# allocators

./: .gitignore  .pre-commit-config.yaml  BUILD.bazel  CMakeLists.txt  README.md  TALK.md  WORKSPACE.bazel  dyn_optional.h  dyn_optional_test.cc
.github/workflows/: cmake.yml  code_coverage.yml  pre-commit.yml
examples/: allocators_test.cc
scripts/: slides.sh
