cc_test(
    name = "allocators_test",
    srcs = ["examples/allocators_test.cc"],
    deps = [
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "dyn_optional",
    hdrs = ["dyn_optional.h"],
)

cc_test(
    name = "dyn_optional_test",
    srcs = ["dyn_optional_test.cc"],
    deps = [
        ":dyn_optional",
        "@com_google_googletest//:gtest_main",
    ],
)
